client/src/components/mascots/_mascots.scss
.mascots {
  .carousel {
    .control-dots {
      padding-bottom: 20px;
      padding: 10px;
      .dot {
        visibility: hidden;
        &:before {
          visibility: visible;
        }
      }
    }
    .slide {
      background: none;
      padding-top: 30px;
      padding-bottom: 30px;
      &:before {
        content: "";
      }
      img {
        width: 220px;
      }
    }
    .control-arrow {
      opacity: 1 !important;
      &:hover {
        background: none !important;
      }
    }
    .control-next {
      &:before {
        content: "";
        margin: 0;
        border: solid black !important;
        border-width: 0 5px 5px 0 !important;
        display: inline-block;
        padding: 10px;
        transform: rotate(-45deg);
        transition: transform 0.3s ease-out;
      }
      &:hover {
        transform: translateX(4px);
      }
    }
    .control-prev {
      &:before {
        content: "";
        margin: 0;
        border: solid black !important;
        border-width: 0 5px 5px 0 !important;
        display: inline-block;
        padding: 10px;
        transform: rotate(135deg);
        transition: transform 0.2s ease-out;
      }
      &:hover {
        transform: translateX(-4px);
      }
    }
  }
  &__inner {
    &--box {
      padding: 30px;
      &__sub-heading {
        text-align: center;
      }
    }
    &__heading {
      padding-bottom: 20px;
    }
    &__btn {
      display: flex;
      justify-content: flex-end;
    }
  }
}

